finished exception handling

--- a/error-handling/src/main/resources/application.yaml
+++ b/error-handling/src/main/resources/application.yaml
@@ -2,6 +2,12 @@ server:
   port: 8089
   servlet:
     context-path: /error-handling
+  error:
+    whitelabel:
+      enabled: true
+    include-exception: true
+    include-stacktrace: never
+    include-message: always
 
 spring:
   datasource:
