added security exercises until roles assign to in memory user

--- a/security-basic/src/main/resources/application.yaml
+++ b/security-basic/src/main/resources/application.yaml
@@ -16,7 +16,13 @@ spring:
 
   security:
     user:
-      name: admin
+      name: default
       password: password
 
 debug: true
+
+logging:
+  level:
+    org:
+      springframework:
+        security: DEBUG
