--- a/security-basic/src/main/resources/application.yaml
+++ b/security-basic/src/main/resources/application.yaml
@@ -4,6 +4,9 @@ server:
     context-path: /security-basic
 
 spring:
+  main:
+    allow-bean-definition-overriding: true
+
   datasource:
     url: jdbc:h2:mem:error-handling
     username: sa
