--- a/security-basic/src/main/resources/application.yaml
+++ b/security-basic/src/main/resources/application.yaml
@@ -7,25 +7,41 @@ spring:
   main:
     allow-bean-definition-overriding: true
 
+  jpa:
+    spring.jpa.database-platform: org.hibernate.dialect.H2Dialect
+
   datasource:
-    url: jdbc:h2:mem:error-handling
+    url: jdbc:h2:mem:security-basic;DB_CLOSE_DELAY=-1
     username: sa
     password: password
     driverClassName: org.h2.Driver
-  jpa:
-    spring.jpa.database-platform: org.hibernate.dialect.H2Dialect
+
+  h2:
+    console:
+      path: /h2
+      settings.trace: false
+      settings.web-allow-others: true
+      enabled: true # http://localhost:8082/security-basic/h2/
+
   flyway:
-    enabled: false
+    enabled: true
+    user: ${spring.datasource.username}
+    password: ${spring.datasource.password}
+#    url: ${spring.datasource.url}
+    url: jdbc:h2:mem:security-basic
+    location: classpath:db/migration
+    validate-on-migrate: true
 
   security:
     user:
       name: default
       password: password
 
-debug: true
+#flyway:
+#  validateOnMigrate: true
 
-logging:
-  level:
-    org:
-      springframework:
-        security: DEBUG
+#logging:
+#  level:
+#    org:
+#      springframework:
+#        security: DEBUG
