--- a/security-basic/src/main/resources/application.yaml
+++ b/security-basic/src/main/resources/application.yaml
@@ -25,20 +25,19 @@ spring:
 
   flyway:
     enabled: true
-    user: ${spring.datasource.username}
-    password: ${spring.datasource.password}
-#    url: ${spring.datasource.url}
-    url: jdbc:h2:mem:security-basic
-    location: classpath:db/migration
-    validate-on-migrate: true
 
   security:
     user:
       name: default
       password: password
 
-#flyway:
-#  validateOnMigrate: true
+flyway:
+  user: ${spring.datasource.username}
+  password: ${spring.datasource.password}
+  url: ${spring.datasource.url}
+  schemas: PUBLIC
+  location: classpath:db/migration
+  validate-on-migrate: true
 
 #logging:
 #  level:
