added error-handling exercise #1

--- a/error-handling/src/main/resources/application.yaml
+++ b/error-handling/src/main/resources/application.yaml
@@ -7,8 +7,9 @@ server:
     whitelabel:
       enabled: true
     include-stacktrace: never
-    include-exception: true
-    include-message: always
+    # TODO update the error configuration to :
+    #  - include the exception name
+    #  - include the reason message
 
 spring:
   datasource:
