added security-basic exercise #2

--- a/security-basic/src/main/resources/application.yaml
+++ b/security-basic/src/main/resources/application.yaml
@@ -19,10 +19,9 @@ spring:
   flyway:
     enabled: false
 
-  security:
-    user:
-      name: default
-      password: password
+  # TODO customize default user
+  #  username: default
+  #  password: password
 
 #logging:
 #  level:
