--- a/monitoring/src/main/resources/application.yaml
+++ b/monitoring/src/main/resources/application.yaml
@@ -38,4 +38,4 @@ management:
   endpoints:
       web:
         exposure:
-          include: health,info,flyway,env,metrics,beans
+          include: health,info,flyway,env,metrics,beans,mappings
